--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.14.2",
+    "formidable": "^1.0.17",
     "jade": "~1.11.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.3",
