--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.1.3",
     "morgan": "~1.6.1",
-    "passport": "~0.2.0",
-    "passport-local": "~1.0.0",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "connect-flash": "^0.1.1",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   }
