--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.4",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.14.2",
@@ -18,7 +20,6 @@
     "morgan": "~1.6.1",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "connect-flash": "^0.1.1",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   }
